<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="HomeFragmentBinding">

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnConnectServer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:padding="12dp"
                    android:text="@string/connect_server"
                    android:textAllCaps="false"
                    app:cornerRadius="22dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvIpAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAlignment="center"
                    app:drawableEndCompat="@drawable/ic_baseline_content_copy_16"
                    android:drawablePadding="8dp"
                    app:drawableTint="?attr/colorPrimary"
                    tools:text="IP Address: 10.0.0.0" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/version"
                android:textAlignment="center"
                app:layout_constraintBottom_toTopOf="@+id/textViewVersion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewVersion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                tools:text="(1.0)" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layoutInitializeIndicator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorSurface"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            tools:visibility="gone">

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:indeterminate="true" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/initializing"/>

        </LinearLayout>


    </FrameLayout>
</layout>